[package]
name = "app_warp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app_warp"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
domain = { path = "../domain" }
use_cases = { path = "../use_cases" }
ports = { path = "../ports" }
infrastructure = { path = "../infrastructure" }

reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
warp = "0.3.7"
